# watermarking

./: .gitignore  CMakeLists.txt  README  README.md
main/: decode.cpp  encode.cpp
src/: WatermarkDecoder.cpp  WatermarkDecoder.h  WatermarkEncoder.cpp  WatermarkEncoder.h  lsb_watermarking.cpp  lsb_watermarking.h
test/: dummy.cpp  main.cpp
